--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "miniblog-reactjs",
   "version": "0.1.0",
+  "homepage": "miniblog-reactjs/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
